[project]
name = "brscan"
version = "0.6.0"
description = "Trigger scans on Brother DSmobile (eSCL / Apple AirScan) scanners from the command line"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jack Venberg" }]
requires-python = ">=3.9"
keywords = ["brother", "escl", "airscan", "scanner", "cli", "mdns"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
]
dependencies = [
    "requests>=2.31",
    "zeroconf>=0.131",
    "img2pdf>=0.5",
    "pillow>=10",
]

[project.optional-dependencies]
# `scanfile` (AI auto-filing) needs the Anthropic SDK; core brscan does not.
ai = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/JVenberg/brscan"
Repository = "https://github.com/JVenberg/brscan"

[project.scripts]
brscan = "brscan.cli:main"
scanfile = "brscan.scanfile:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brscan"]
